crates/squealy/tests/compile_fail/nulls_ordering_rejected_in_window.stderr
error[E0308]: mismatched types
  --> tests/compile_fail/nulls_ordering_rejected_in_window.rs:17:71
   |
17 |         .select(|(post,)| post.id.sum().over(|window| window.order_by(post.score.asc().nulls_last())));
   |                                                              -------- ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `Order<'_, _, _>`, found `OrderNullsTerm<'_, PostScore>`
   |                                                              |
   |                                                              arguments to this method are incorrect
   |
   = note: expected struct `Order<'_, _, _>`
              found struct `OrderNullsTerm<'_, PostScore>`
note: method defined here
  --> $WORKSPACE/crates/squealy-core/src/expr.rs
   |
   |     pub fn order_by<K, Ast>(self, order: Order<'scope, K, Ast>) -> Window<'scope, Parts, Ords::Output>
   |            ^^^^^^^^
